--- a/src/web/themes/custom/workbc_cdq/scss/_components.scss
+++ b/src/web/themes/custom/workbc_cdq/scss/_components.scss
@@ -1262,13 +1262,13 @@ body.path-quiz {
     &.form-actions {
       width: auto;
       min-height: auto;
-      margin-top: 0;
+      margin: 20px 0;
       padding: 0 15px;
       right: 0;
-
+      display: flex;
+      flex-direction: row-reverse;
       @media all and (max-width: 767.98px) {
-        bottom: -130px;
-        display: flex;
+
         left: 50%;
         justify-content: center;
       }
@@ -1279,7 +1279,7 @@ body.path-quiz {
           bottom: -220px;
         }
         > input{
-          margin: 0;
+          margin: 10px 0;
           width: 100%;
           &#edit-previous{
             margin-bottom: 15px;
@@ -1306,14 +1306,14 @@ body.path-quiz {
       right: 15px;
       z-index: 1;
       border-radius: 0;
-      margin: 0;
+      margin: 0 10px;
       @media all and (max-width: 767.98px){
         position: relative;
         right: 0;
         margin: 0 15px 0 15px;
       }
       @media all and (max-width: 640.98px){
-        margin: 0;
+        margin: 5px 0;
       }
 
       &:hover {
@@ -1570,6 +1570,17 @@ body.path-quiz {
   form {
     fieldset {
       display: flex;
+      @media all and (max-width: 1024px){
+        flex-direction: column;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding: 20px 10px;
+
+        legend {
+          float: right;
+          margin: 0 0 0 10px;
+        }
+      }
 
       &.workbc-quiz-fieldset-odd {
         background: rgba(242, 242, 242, 1);
@@ -1759,8 +1770,8 @@ form{
         margin: 30px;
         display: block;
         @media all and (max-width: 1024.98px){
-          margin: 0 30px;
-          padding-top: 50px;
+          margin: 0;
+          padding-top: 0;
         }
       }
     }
@@ -1768,8 +1779,9 @@ form{
       float: left;
       width: 60%;
       padding-top: 20px;
-      @media all and (max-width: 1024.98px){
-        float: none;
+      @media all and (max-width: 1024px){
+        padding-top: 0;
+        float: unset;
         width: 100%;
         .form-radios{
           display: flex;
